fix(header): add spacing to the header without image

--- a/source/css/_objects.sections.scss
+++ b/source/css/_objects.sections.scss
@@ -101,6 +101,8 @@
 }
 
 .c-page-header__long {
+  padding-top: $space * 6;
+
   &--inner {
     position: relative;
   }
@@ -109,19 +111,12 @@
     position: relative;
     z-index: 1;
     padding: $space;
+    padding-top: $space * 4;
   }
 
   &__subtitle {
     > * {
       padding: ($space * 2) $space;
-    }
-  }
-
-  &.has-background {
-    padding-top: $space * 6;
-
-    .c-page-header__content {
-      padding-top: $space * 4;
     }
   }
 }
